[project]
name = "atlas-data"
version = "6.0.0"
description = "ATLAS Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "stix2>=3.0.2",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[project.scripts]
populate-atlas-db = "tools.populate_atlas_db:main"
atlas-to-stix = "tools.atlas_to_stix:main"
atlas-to-excel = "tools.atlas_to_excel:main"
generate-navigator-layers = "tools.generate_navigator_layers:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["atlas", "tools", "atlas.*", "tools.*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
